# paintit

./: .gitignore  game.py  main.py  paintit.py  pyproject.toml
.github/workflows/: build.yaml
paintit/: controls.py
