[project]
name = "paintit"
version = "0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.3",
    "pygame-ce>=2.5.7",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pyinstaller>=6.19.0",
    "pyright>=1.1.408",
    "ruff>=0.15.0",
]
